Img, styles, function, sections
se agregaron img, styles, function, sections

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,17 @@ body{
     background: var(--bg);
 }
 
+section{
+    padding: 2rem 7%;
+}
+
+.heading{
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+}
+
 .btn{
     margin-top: 1rem;
     display: inline-block;
@@ -71,7 +82,7 @@ body{
 }
 
 .header .navbar a{
-    margin:0 1 rem;
+    margin:0 1rem;
     font-size: 1,6rem;
     color: #fff;
 }
@@ -186,6 +197,34 @@ header .cart-items-container .btn{
     text-align: center;
 }
 
+.home{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background: url(../images/coffeeback3.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.home .content{
+    max-width: 60rem;
+}
+
+.home .content h3{
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.home .content p{
+    font-size: 2rem;
+    font-weight: lighter;
+    line-height: 1.8;
+    padding: 1rem 0;
+    color: #eee;
+}
+
+
 
 
 
@@ -201,6 +240,10 @@ header .cart-items-container .btn{
 
     .header{
         padding: 1.5rem 2rem;
+    }
+
+    section{
+        padding: 2rem;
     }
 }
 
@@ -233,6 +276,20 @@ header .cart-items-container .btn{
     .header .search-form{
         width: 90%;
         right: 2rem;
+    }
+
+    .home{
+        background-position: left;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .home .content h3{
+        font-size: 4.5rem;
+    }
+
+    .home .content p{
+        font-size: 1.5rem;
     }
 }
 
