Correcciones de errores
Se arreglaron varios errores en etiquetas y clases de todos los archivos

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,12 @@ section{
     text-align: center;
     color: #fff;
     text-transform: uppercase;
-    padding-bottom: 3.5rem;
+    padding-bottom: 4rem;
+}
+
+.heading span{
+    color: var(--main-color);
+    text-transform: uppercase;
 }
 
 .btn{
@@ -83,7 +88,7 @@ section{
 
 .header .navbar a{
     margin:0 1rem;
-    font-size: 1,6rem;
+    font-size: 1.6rem;
     color: #fff;
 }
 
@@ -92,7 +97,7 @@ section{
     border-bottom: .1rem solid var(--main-color);
     padding-bottom: .5rem;
 }
-
+/* Iconos de busqueda y carrito*/
 .header .icons div{
     color: #fff;
     cursor: pointer;
@@ -146,7 +151,7 @@ section{
 
 .header .cart-items-container{
     position: absolute;
-    top: 100%; right: -100%;
+    top: 100%; right: -100%;/*Mueve el menu a la derecha para que no se vea hasta que se active*/
     height: calc(100vh - 9.5rem);
     width: 35rem;
     background: #fff;
@@ -157,7 +162,7 @@ section{
     right: 0;
 }
 
-header .cart-items-container .cart-item{
+.header .cart-items-container .cart-item{
     position: relative;
     margin: 2rem 0;
     display: flex;
@@ -165,7 +170,7 @@ header .cart-items-container .cart-item{
     gap: 1.5rem;
 }
 
-header .cart-items-container .cart-item .fa-times{
+.header .cart-items-container .cart-item .fa-times{
 position: absolute;
 top: 1rem; right: 1rem;
 font-size: 2rem;
@@ -173,26 +178,27 @@ cursor: pointer;
 color: var(--black);
 }
 
-header .cart-items-container .cart-item .fa-times:hover{
+.header .cart-items-container .cart-item .fa-times:hover{
     color: var(--main-color);
 }
 
-header .cart-items-container .cart-item img{
+.header .cart-items-container .cart-item img{
     height: 7rem;
 }
 
-header .cart-items-container .cart-item .content h3{
+.header .cart-items-container .cart-item .content h3{
     font-size: 2rem;
     color: var(--black);
     padding-bottom: .5rem;
 }
 
-header .cart-items-container .cart-item .content .price{
+.header .cart-items-container .cart-item .content .price{
     font-size: 1.5rem;
     color: var(--main-color);
 }
 
-header .cart-items-container .btn{
+/*Boton de checkout de items*/
+.header .cart-items-container .btn{
     width: 100%;
     text-align: center;
 }
@@ -252,7 +258,8 @@ header .cart-items-container .btn{
 
     #menu.btn{
         display: inline-block;
-    }
+    } 
+    
     .header .navbar{
         position: absolute;
         top: 100%; right: -100%;
@@ -261,7 +268,7 @@ header .cart-items-container .btn{
         background: #fff;
     }
 
-    .header .navbar .active{
+    .header .navbar.active{
         right: 0;
     }
 
