Correcciones de errores
Se volvieron a corregir errores de los iconos y se agrego css

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ section{
     text-align: center;
     color: #fff;
     text-transform: uppercase;
-    padding-bottom: 4rem;
+    padding-bottom: 3.5rem;
+    font-size: 4rem;
 }
 
 .heading span{
@@ -230,7 +231,39 @@ color: var(--black);
     color: #eee;
 }
 
+/*Hace que la imagen y el texto aparezcan uno al lado del otro, en filas*/
+.about .row{
+    display: flex;
+    align-items: center;
+    background-color: var(--black);
+    flex-wrap: wrap;
+}
 
+.about .row .image{
+    flex: 1 1 45rem;
+}
+
+.about .row .image img{
+    width: 100%;
+}
+
+/*Se limita el cuadro de texto y se cambia el estilo de las letras*/
+.about .row .content{
+    flex: 1 1 45rem;
+    padding: 2rem;
+}
+
+.about .row .content h3{
+    font-size: 3rem;
+    color: #fff;
+}
+
+.about .row .content p{
+    font-size: 1.6rem;
+    color: #ccc;
+    padding: 1rem 0;
+    line-height: 1.8;
+}
 
 
 
@@ -256,7 +289,7 @@ color: var(--black);
 @media (max-width:768px){
 
 
-    #menu.btn{
+    #menu-btn{
         display: inline-block;
     } 
     
