products and review
Se finalizo la seccion de productos y se comenzo a trabajar en la seccion de reviews.

Falta ver la parte responsive de products

--- a/css/style.css
+++ b/css/style.css
@@ -293,11 +293,13 @@ color: var(--black);
     color: #fff;
     font-size: 2.5rem;
     padding: 5rem 0;
+    
 }
 
 .menu .box-container .box .price span{
     font-size: 1.5rem;
     text-decoration: line-through;/*tacha el precio span, mostrando como que el precio es anterior*/
+    font-weight: lighter;
 }
 
 .menu .box-container .box:hover{
@@ -339,6 +341,38 @@ Asi que los cambios de van a aplicar a los elementos del box que estan dentro de
     background-color: var(--main-color);
 }
 
+.products .box-container .box .image{
+    padding: 2.5rem 0;
+}
+
+.products .box-container .box .image img{
+    height: 25rem;
+}
+
+.products .box-container .box .content h3{
+    color: #fff;
+    font-size: 2.5rem;
+}
+
+.products .box-container .box .content .stars{
+    padding: 1.5rem;
+}
+
+.products .box-container .box .content .stars i{
+    font-size: 1.7rem;
+    color: var(--main-color);
+}
+
+.products .box-container .box .content .price{
+    color: #fff;
+    font-size: 2.5rem;
+}
+
+.products .box-container .box .content .price span{
+    text-decoration: line-through;
+    font-weight: lighter;
+    font-size: 1.5rem;
+}
 
 
 
